# logis_batch

./: ChangeLog  Makefile  Makefile.in  README.md  build_configure  config.status  configure  configure.ac  glm.c  glm.h  util.cpp  util.h
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
src/: Makefile  Makefile.am  Makefile.in  logis_batch  logis_batch.cpp  string_array.c  string_array.h
src/.deps/: glm.Po  logis_batch.Po  string_array.Po  util.Po
test/: compare.py  test.sh
